--- a/package.json
+++ b/package.json
@@ -11,5 +11,13 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.7.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AbbireddyPrasad-BRS/glarimy-converter.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AbbireddyPrasad-BRS/glarimy-converter/issues"
+  },
+  "homepage": "https://github.com/AbbireddyPrasad-BRS/glarimy-converter#readme"
 }
